<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar"
            android:layout_gravity="start|top">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ico_launch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/app_name"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:id="@+id/textView6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6"
                android:id="@+id/textWidDate"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:layout_toLeftOf="@+id/button"
                android:layout_toStartOf="@+id/button"
                android:textSize="15sp"
                android:text="@string/str_detail_empty"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/refresh_icon"
            android:contentDescription="@string/refresh_widget"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/button"/>

    </RelativeLayout>

    <TextView
        android:textSize="20sp"
        android:text="@string/no_stocks_added"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/textEmpty_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar"
        android:id="@+id/stock_list">
    </ListView>
</RelativeLayout>
</FrameLayout>